Migration from #wiki-dev-africa to #wikimedia-dev-africa
As per requested by community and internal discussions by the AWMD
core team, we are moving the AWMD channel from #wiki-dev-africa to
official IRC channel namespace (#wikimedia-*)

Bug: T184903
Change-Id: I715bad179235f833cb82797bcbdff5bb70fd759c

--- a/channels.yaml
+++ b/channels.yaml
@@ -289,7 +289,7 @@ channels:
     "##goat":
         - Goatification
 
-    "#wiki-dev-africa":
+    "#wikimedia-dev-africa":
         - Africa-Wikimedia-Developers
         - MediaWiki-extensions-SendGrid
 
