Follow-up: I forgot Phabricator's sub-projects
Bug: T185285
Change-Id: I314d57fdd28d21f2f4c81b8e25565ce9a4e967c5

--- a/channels.yaml
+++ b/channels.yaml
@@ -116,7 +116,7 @@ channels:
         - Deployments
         - scap(.*)
         - Gerrit
-        - Phabricator
+        - Phabricator(.*)
         - Differential
         - Diffusion
         - Project-Admins
