Add mediawiki/extensions/JADE to #wikimedia-ai
Change-Id: I47932c426069d086d02d98258876985dda97bc8b

--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -59,6 +59,7 @@ channels:
         mediawiki/extensions/RDFIO:
         mediawiki/extensions/SolrStore:
     "#wikimedia-ai":
+        mediawiki/extensions/JADE:
         mediawiki/extensions/ORES:
         mediawiki/services/ores/deploy:
         mediawiki/services/ores:
