--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -166,9 +166,10 @@ channels:
         mediawiki/tools/scap:
         All-Projects:
         All-Users:
+        All-Groups:
         # All commits to a betacluster branch goes here
         .*:
-            branch: "betacluster"
+            branch: "^(refs/meta/config|betacluster)"
     "#wikidata-feed":
         purtle:
         data-values/.*:
