Changing the channel for wikimedia-de related messages
In order to reduce spamming on the wikimedia-de-tech channel,
we created wikimedia-de-tech-feed.

Change-Id: If745a85073b5e58156b3f920689dd7eb43065e6a

--- a/channels.yaml
+++ b/channels.yaml
@@ -52,7 +52,7 @@ channels:
         - WikiLove
         - Pywikibot-Flow
 
-    "#wikimedia-de-tech":
+    "#wikimedia-de-tech-feed":
         - TCB-Team
         - German-Community-Wishlist
         - Phragile
