Notify #mediawiki-parsoid for more project bugs
Change-Id: I78c207c80de8562e0802a059359bf0d590696be1

--- a/channels.yaml
+++ b/channels.yaml
@@ -168,7 +168,9 @@ channels:
     "#mediawiki-parsoid":
         - Parsoid(-.*)?
         - Parsing-Team
-        - MediaWiki-extensions-ParserFunctions
+        - MediaWiki-Parser
+        - MediaWiki-extensions-(ParserFunctions|Linter)
+        - RemexHtml
 
     "#wikimedia-services":
         - restbase.*
