Send Parsing-Team bugs to the #mediawiki-parsoid channel
<arlolra> how come we don't have irc notification for parsing-team bug?

Change-Id: I22d3c3ac663538fb54c0c78fc3b8783a1e036fa7

--- a/channels.yaml
+++ b/channels.yaml
@@ -167,6 +167,7 @@ channels:
 
     "#mediawiki-parsoid":
         - Parsoid(-.*)?
+        - Parsing-Team
         - MediaWiki-extensions-ParserFunctions
 
     "#wikimedia-services":
