Add scoring repo
Change-Id: Id6d69bd9f5d40c4c220873f71df5629b079aee40

--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -68,6 +68,7 @@ channels:
         research/ores:
         research/ores/deploy:
         research/ores/wheels:
+        scoring/ores/assets:
     "#wikimedia-analytics":
         analytics/.*:
     "#wikimedia-perf-bots":
