Add more Gerrit repos to #wikimedia-perf-bots
Change-Id: I624138885eb7300f41a652599eae42c71fb6e8bb

--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -73,6 +73,10 @@ channels:
         analytics/.*:
     "#wikimedia-perf-bots":
         performance.*:
+        analytics/statsv:
+        mediawiki/extensions/NavigationTiming:
+        mediawiki/extensions/PerformanceInspector:
+        mediawiki/extensions/WikimediaEvents:
     "#wikimedia-dev":
         # This is also sent to #mediawiki-i18n
         mediawiki/extensions/Babel:
