Add #wikimedia-ri-ci with relevant repos and Phab project
Change-Id: I575d860467b75d7406712f85ade5f12d418f8444

--- a/channels.yaml
+++ b/channels.yaml
@@ -282,6 +282,9 @@ channels:
     "##goat":
         - Goatification
 
+    "#wikimedia-ri-ci":
+        - Reading-Infrastructure-Team-Backlog
+
     "#wikimedia-dev-africa":
         - Africa-Wikimedia-Developers
         - MediaWiki-extensions-SendGrid
