Example Reading-Infrastructure-Team projects
Change-Id: I7a3c9e5d0b8d1e3730526c0cdff8eb66120db6d4

--- a/channels.yaml
+++ b/channels.yaml
@@ -283,7 +283,7 @@ channels:
         - Goatification
 
     "#wikimedia-ri-ci":
-        - Reading-Infrastructure-Team-Backlog
+        - Reading-Infrastructure-Team(-.*)?
 
     "#wikimedia-dev-africa":
         - Africa-Wikimedia-Developers
