Clean up testing situation
- make sure unit tests run automatically
- this also means we need to install all dependencies
- test_online_scrape fails because the current HTML is no longer processed correctly

Change-Id: I33486e2f95a3f9a22c34f3d52031bf51352b6856

--- a/tox.ini
+++ b/tox.ini
@@ -15,8 +15,9 @@ deps = flake8
 basepython = python3
 
 [testenv]
-commands = ./test_channels_yaml.py
-deps = PyYAML
+commands = py.test tests/
+setenv = PYTHONPATH = {toxinidir}
+deps = -rrequirements.txt
 basepython = python3
 
 [flake8]
