Add few more gerrit projects to #wikimedia-dev-africa
Added "mediawiki/skins/Vector" and "pywikibot.*" in order
to follow development of these projects on the awmd channel.

Change-Id: I0c057267986a8540bb2175a4160feda752b52a90

--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -33,6 +33,7 @@ channels:
         mediawiki/extensions/Math:
         mediawiki/extensions/ParserFunctions:
         mediawiki/skins/apex:
+        # Sent to #wikimedia-dev-africa as well
         mediawiki/skins/Vector:
         oojs/.*:
         # Also in #wikimedia-services
@@ -48,6 +49,7 @@ channels:
         mapdata:
     "#pywikibot":
         pywikipediabot.*:
+        # Sent to #wikimedia-dev-africa as well
         pywikibot.*:
     "#semantic-mediawiki":
         mediawiki/extensions/PageForms:
@@ -235,6 +237,8 @@ channels:
         mediawiki/extensions/MassMessage:
         mediawiki/extensions/SendGrid:
         labs/tools/Commons-twitter-bot:
+        mediawiki/skins/Vector:
+        pywikibot.*:
     "##Zppix-Wikipedia":
          labs/tools/ZppixBot:
          labs/tools/quarrybot-enwiki:
