channels: wikibugs notifications in `#wikimedia-commons-sd`
Add wikibugs notifications on the IRC channel `#wikimedia-commons-sd`
for tasks tagged with `#Structured-Data-Commons`.

Bug: T178410
Change-Id: I985b5570d4f05189e623082377e7a88ad06b8738

--- a/channels.yaml
+++ b/channels.yaml
@@ -200,6 +200,9 @@ channels:
     "#wikimedia-commons-tech":
         - Commons
 
+    "#wikimedia-commons-sd":
+        - Structured-Data-Commons
+
     # The following changes should ALWAYS be in #wikimedia-dev, even if the bugs
     # are also reported elsewhere.
     "#wikimedia-dev":
