Add "awmd-stats" gerrit repo to #wikimedia-dev-africa channel
Adding the awmd-stats repo to have gerrit push notifications to
the AWMD channel (#wikimedia-dev-africa).

Change-Id: Ia9c4bfc8d268f62fb8d0f99bd2135de71a50c216

--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -239,6 +239,7 @@ channels:
         labs/tools/Commons-twitter-bot:
         mediawiki/skins/Vector:
         pywikibot.*:
+        labs/tools/awmd-stats:
     "##Zppix-Wikipedia":
          labs/tools/ZppixBot:
          labs/tools/quarrybot-enwiki:
