Add gerrit repo analytics/quarry.* to #wikimedia-cloud
Change-Id: I17b618d4e7df1b0cf7bdae2844913ce2042ccd4f

--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -154,6 +154,7 @@ channels:
         mediawiki/extensions/Mantle:
     "#wikimedia-cloud":
         labs/.*:
+        analytics/quarry.*:
     "#wikimedia-operations":
         # Do not post betacluster stuff here
         operations(?!/debs/wikistats).*:
