--- a/channels.yaml
+++ b/channels.yaml
@@ -1,3 +1,12 @@
+## WARNING
+## Do **NOT** add new channels here without arranging with FreeNode staff to get the wikibugs bot
+## exempt from Sigyn in the given channel.
+## This applies regardless of whether Sigyn is currently present in the channel or not, we are not
+## about to trust random channel ops who could ask for Sigyn to be added later without knowing about
+## or mentioning the bot exemption requirement.
+## Failure to do so may lead to wikibugs being banned across the whole network the next time it
+## forwards something strange to a channel where it has no exemption.
+
 channels:
     '##legoktm-bots':
         - foobarbaz
@@ -292,3 +301,12 @@ channels:
 
 firehose-channel: '#mediawiki-feed'
 default-channel: '#wikimedia-dev'
+
+## WARNING
+## Do **NOT** add new channels here without arranging with FreeNode staff to get the wikibugs bot
+## exempt from Sigyn in the given channel.
+## This applies regardless of whether Sigyn is currently present in the channel or not, we are not
+## about to trust random channel ops who could ask for Sigyn to be added later without knowing about
+## or mentioning the bot exemption requirement.
+## Failure to do so may lead to wikibugs being banned across the whole network the next time it
+## forwards something strange to a channel where it has no exemption.
