Add GCI 2018 work-board to #wikimedia-dev-africa
As some GCI mentors will like to have updates on the happenings
of GCI 2018 work-board, adding this to the channel for feeds.

Add examples extension to #wikimedia-dev so wikibugs can also
push feeds to the channel.

Change-Id: I626f74b7065088877e83ee700019d5edf88c6e9a

--- a/channels.yaml
+++ b/channels.yaml
@@ -227,6 +227,7 @@ channels:
         - OOjs-UI(-.*)?
         - accessibility
         - mediawiki-interface
+        - Google-Code-in-2018
 
     "#wikimedia-fundraising":
         - .*(?<!WMDE-)(?<!TCB-Team-)Fundraising.*
@@ -298,6 +299,7 @@ channels:
     "#wikimedia-dev-africa":
         - Africa-Wikimedia-Developers
         - MediaWiki-extensions-SendGrid
+        - Google-Code-in-2018
 
 firehose-channel: '#mediawiki-feed'
 default-channel: '#wikimedia-dev'
