Add Pywikibot-core phab board to #wikimedia-dev-africa
Adding Pywikibot-core (only) phab board to the channel

Change-Id: I5a098b752da7f66890e82678678aa960cad48bdd

--- a/channels.yaml
+++ b/channels.yaml
@@ -300,6 +300,7 @@ channels:
         - Africa-Wikimedia-Developers
         - MediaWiki-extensions-SendGrid
         - Google-Code-in-2018
+        - Pywikibot-core
 
 firehose-channel: '#mediawiki-feed'
 default-channel: '#wikimedia-dev'
