--- a/channels.yaml
+++ b/channels.yaml
@@ -303,7 +303,7 @@ channels:
         - Africa-Wikimedia-Developers
         - MediaWiki-extensions-SendGrid
         - Google-Code-in-2018
-        - Pywikibot-core
+        - Pywikibot
 
 firehose-channel: '#mediawiki-feed'
 default-channel: '#wikimedia-dev'
