--- a/channels.yaml
+++ b/channels.yaml
@@ -34,6 +34,9 @@ channels:
         - WM-Bot
 
     "#wikimedia-ai":
+        - JADE
+        - MediaWiki-extensions-ORES
+        - ORES
         - Scoring-platform-team(.*)?
 
     "#wikidata-feed":
