channels: Route certcentral tasks to -traffic
Change-Id: Ic45c5fac64db28f76374fcf955dd785f4c547373

--- a/channels.yaml
+++ b/channels.yaml
@@ -249,6 +249,7 @@ channels:
         - wikimedia-apache-configuration
         - domains
         - HTTPS
+        - Certcentral
 
     "#wikimedia-teampractices":
         - team-practices
