--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -128,6 +128,7 @@ channels:
         mediawiki/extensions/SendGrid:
         mediawiki/extensions/MassMessage:
         mediawiki/extensions/examples:
+        mediawiki/extensions/Cargo:
         # Sent to #wikimedia-design as well
         mediawiki/skins/Blueprint:
         mediawiki/extensions/OOUIPlayground:
