Move Infrastructure feeds to new channel
Change-Id: I67efdc66dd0713a6b412c82cbb3a6adcd96e7a59

--- a/channels.yaml
+++ b/channels.yaml
@@ -297,7 +297,7 @@ channels:
     "##goat":
         - Goatification
 
-    "#wikimedia-ri-ci":
+    "#wikimedia-infrastructure":
         - Reading-Infrastructure-Team(-.*)?
 
     "#wikimedia-dev-africa":
