--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -256,7 +256,7 @@ channels:
          labs/tools/ZppixBot:
          labs/tools/quarrybot-enwiki:
          labs/icinga2:
-    "#wikimedia-ri-ci":
+    "#wikimedia-infrastructure":
          mediawiki/services/mobileapps:
          mediawiki/services/mobileapps/deploy:
          mediawiki/extensions/MobileApp:
