gerrit-channels: Move WMCS feeds to #wikimedia-cloud-feed
Discussion: https://lists.wikimedia.org/pipermail/cloud-admin/2018-October/000259.html

Also fixed a few pre-existing warnings from flake8.

Bug: T208009
Change-Id: I5b262552902e2b950d92f143ab641b706cb3c700

--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -162,7 +162,7 @@ channels:
         mediawiki/extensions/WikiLove:
         # This is sent to #wikimedia-mobile too.
         mediawiki/extensions/Mantle:
-    "#wikimedia-cloud":
+    "#wikimedia-cloud-feed":
         labs/.*:
         analytics/quarry.*:
     "#wikimedia-operations":
