Add MobileFrontend board to -dev & other boards to -dev-africa
* Added MobileFrontend workboard to #wikimedia-dev.
* Updated work boards for #wikimedia-dev-africa and added useful
  work boards wrt to the project and removed less useful.

Change-Id: I380168dd2681e4fa4e469cd1bd5a67ed249d7cab

--- a/channels.yaml
+++ b/channels.yaml
@@ -231,6 +231,7 @@ channels:
         - accessibility
         - mediawiki-interface
         - Google-Code-in-2018
+        - MobileFrontend
 
     "#wikimedia-fundraising":
         - .*(?<!WMDE-)(?<!TCB-Team-)Fundraising.*
@@ -302,8 +303,9 @@ channels:
 
     "#wikimedia-dev-africa":
         - Africa-Wikimedia-Developers
-        - MediaWiki-extensions-SendGrid
         - Google-Code-in-2018
+        - goodfirstbug
+        - Needs-volunteer
         - Pywikibot
 
 firehose-channel: '#mediawiki-feed'
