-releng: Add blubber gerrit changes
Change-Id: I98752082dde4125a4f64693db00abd6379189c0d

--- a/gerrit-channels.yaml
+++ b/gerrit-channels.yaml
@@ -183,6 +183,7 @@ channels:
         mediawiki/tools/release:
         mediawiki/tools/releng:
         mediawiki/tools/scap:
+        blubber:
         All-Projects:
         All-Users:
         All-Groups:
