Add #wmcz-tracker to gerrit channels
Change-Id: Ib9e908c95c78ede2b9c2a8a8d46a3373d2a2e4da

--- a/channels.yaml
+++ b/channels.yaml
@@ -308,6 +308,9 @@ channels:
         - Needs-volunteer
         - Pywikibot
 
+    "#wmcz-tracker":
+        - WMCZ-Tracker
+
 firehose-channel: '#mediawiki-feed'
 default-channel: '#wikimedia-dev'
 
