Send "Zuul" phabricator project updates to #wikimedia-releng
Change-Id: I0180d2d3de0d5fc94f3154da412b32a80c45cad9

--- a/channels.yaml
+++ b/channels.yaml
@@ -131,6 +131,7 @@ channels:
         - MediaWiki-Releasing
         - MediaWiki-Codesniffer
         - commit-message-validator
+        - Zuul
 
     "#mediawiki-visualeditor":
         - VisualEditor(-.*)?
